tests/lime/fail/tokens/label_rest/byte_10.wsa
jmp .l
 .l
: push 10
